<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/pregunta3"
        android:textSize="18sp"/>


        <RadioGroup
            android:id="@+id/pregunta3_r"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pregunta3_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3_r1"
                android:layout_marginEnd="16dp"
                android:tag="1"/>

            <RadioButton
                android:id="@+id/pregunta3_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3_r2"
                android:layout_marginEnd="16dp"
                android:tag="0"/>

            <RadioButton
                android:id="@+id/pregunta3_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3_r3"
                android:layout_marginEnd="16dp"
                android:tag="0"/>

        </RadioGroup>


</LinearLayout>
